[package]
name = "energy_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio",  "postgres" ] }
serde = "1.0.196"
toml = "0.8.10"